mostly working, last issue with frontend

--- a/back/src/.env
+++ b/back/src/.env
@@ -1,1 +1,6 @@
-POSTGRESQL_WEBHOOK_DETAIL_TABLE=pull-request-details
+AURORA_POSTGRES__WRITER_ENDPOINT = "pull-request-details.cluster-cf8wce8ie64x.eu-north-1.rds.amazonaws.com"
+AURORA_POSTGRES__READER_ENDPOINT = "pull-request-details.cluster-ro-cf8wce8ie64x.eu-north-1.rds.amazonaws.com"
+AURORA_POSTGRES__PORT = "5432"
+AURORA_POSTGRES__DATABASE = "pull_request_details"
+AURORA_POSTGRES__USERNAME = "postgres"
+AURORA_POSTGRES__PASSWORD = "postgresauditech"
